tdf#160522 Chart > 4 columns, Only 4 colors

regression from
    commit 337a9a454c1bc95214111578d3f9c0622c55c509
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon May 18 09:17:04 2020 +0200
    use for-range on Sequence in chart2

Change-Id: I94f9460e45e5910af1de905605158f9dc1dbedfb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168868
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 013282b1421c0bba66ef54ccbfe4a649a4b97628)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168879
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>